đổi tên biểu đồ 2

--- a/d3/dashboard.html
+++ b/d3/dashboard.html
@@ -193,7 +193,7 @@
                       .attr("text-anchor", "middle")
                       .style("font-size", "16px")
                       .style("font-weight", "bold")
-                      .text("Heart Disease Prevalence Rate by Gender");
+                      .text("Heart Disease Rate by Gender");
                   
                     d3.csv("heart_disease_rate_by_gender.csv", function(data) {
                       // X scale
